Updated template to add reactComp for replacement, updated route for rendering website

--- a/public/template.html
+++ b/public/template.html
@@ -8,10 +8,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Staatliches"
     />
-    <title>Ecommerce Platform</title>
+    <title>Sorano</title>
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      {reactComp}
+    </div>
   </body>
 </html>
